Code documentation generation implemented.
Doxygen is used to automatically generate code documentation.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,14 +1,10 @@
-# /phoenix/Makefile
+# /phoenix/doc/Makefile
 #
 # This file is a part of Phoenix operating system.
 # Copyright (c) 2011, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
-SUBDIRS = doc kernel
+SUBDIRS = doxygen
 
 include $(PHOENIX_ROOT)/make/make.mak
-
-clean:
-	rm -rf $(INSTALL_ROOT)
-	#$(MAKE) -C mfs clean
