Implementing text streams framework. Intermediate state.

--- a/kernel/kern/Makefile
+++ b/kernel/kern/Makefile
@@ -1,13 +1,8 @@
-# /phoenix/kernel/Makefile
+# /phoenix/kernel/kern/Makefile
 #
 # This file is a part of Phoenix operating system.
 # Copyright (c) 2011, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
-export KERNROOT = $(PHOENIX_ROOT)/kernel
-MAKEIMAGE = 1
-
-SUBDIRS = init boot kern $(PHOENIX_ROOT)/lib/common
-
-include $(KERNROOT)/make/make.mak
+include ${KERNROOT}/make/make.mak
