Unit testing framework implemented. Automatically generated stubs added. Experimental version - will be merged to master branch after the first production test case is developed.

--- a/unit_tests/common/OTextStream/Makefile
+++ b/unit_tests/common/OTextStream/Makefile
@@ -8,6 +8,7 @@
 TEST_NAME = OTextStream
 TEST_DESC = Output text stream
 
-TEST_SRCS = $(PHOENIX_ROOT)/lib/common/OTextStream.cpp
+TEST_SRCS = $(PHOENIX_ROOT)/lib/common/OTextStream.cpp \
+	$(PHOENIX_ROOT)/lib/common/CommonLib.cpp
 
 include $(PHOENIX_ROOT)/make/unit_test.mak
