Added unit test for BitString (is failing now).

--- a/unit_tests/common/BitString/Makefile
+++ b/unit_tests/common/BitString/Makefile
@@ -1,10 +1,13 @@
-# /phoenix/unit_tests/common/Makefile
+# /phoenix/unit_tests/common/BitString/Makefile
 #
 # This file is a part of Phoenix operating system.
 # Copyright (c) 2011, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
-SUBDIRS = BitString OTextStream
+TEST_NAME = BitString
+TEST_DESC = Bit strings
+
+TEST_SRCS = $(PHOENIX_ROOT)/lib/common/CommonLib.cpp
 
 include $(PHOENIX_ROOT)/make/unit_test.mak
