--- a/unit_tests/common/BuddyAllocator/Makefile
+++ b/unit_tests/common/BuddyAllocator/Makefile
@@ -9,7 +9,7 @@ TEST_NAME = BuddyAllocator
 TEST_DESC = Universal buddy allocator
 
 TEST_SRCS = $(PHOENIX_ROOT)/lib/common/BuddyAllocator.cpp \
-	$(PHOENIX_ROOT)/lib/common/CommonLib.cpp
+	$(PHOENIX_ROOT)/lib/common/CommonLib.cpp $(PHOENIX_ROOT)/lib/common/RBTree.cpp
 
 TEST_DEFS = KERNEL
 
