Fixed bug in BuddyAllocator initialization. Added logging support to unit testing framework. Fixed improper handling of BSS symbols in unit test automatically generated stubs.

--- a/unit_tests/common/BuddyAllocator/Makefile
+++ b/unit_tests/common/BuddyAllocator/Makefile
@@ -8,8 +8,11 @@
 TEST_NAME = BuddyAllocator
 TEST_DESC = Universal buddy allocator
 
-TEST_SRCS = $(PHOENIX_ROOT)/lib/common/BuddyAllocator.cpp \
-	$(PHOENIX_ROOT)/lib/common/CommonLib.cpp $(PHOENIX_ROOT)/lib/common/RBTree.cpp
+TEST_SRCS = \
+	$(PHOENIX_ROOT)/lib/common/BuddyAllocator.cpp \
+	$(PHOENIX_ROOT)/lib/common/CommonLib.cpp \
+	$(PHOENIX_ROOT)/lib/common/OTextStream.cpp \
+	$(PHOENIX_ROOT)/lib/common/RBTree.cpp
 
 TEST_DEFS = KERNEL
 
