--- a/unit_tests/common/Trees/Makefile
+++ b/unit_tests/common/Trees/Makefile
@@ -8,7 +8,8 @@
 TEST_NAME = Trees
 TEST_DESC = Various tree data types
 
-TEST_SRCS = $(PHOENIX_ROOT)/lib/common/CommonLib.cpp \
+TEST_SRCS = \
+	$(PHOENIX_ROOT)/lib/common/CommonLib.cpp \
 	$(PHOENIX_ROOT)/lib/common/RBTree.cpp
 
 TEST_DEFS = KERNEL
