Fixed unit tests in order to support logging in tests.

--- a/unit_tests/common/BitString/Makefile
+++ b/unit_tests/common/BitString/Makefile
@@ -8,7 +8,9 @@
 TEST_NAME = BitString
 TEST_DESC = Bit strings
 
-TEST_SRCS = $(PHOENIX_ROOT)/lib/common/CommonLib.cpp
+TEST_SRCS = \
+	$(PHOENIX_ROOT)/lib/common/CommonLib.cpp \
+	$(PHOENIX_ROOT)/lib/common/OTextStream.cpp
 
 TEST_DEFS = KERNEL
 
