--- a/lib/triton/Makefile
+++ b/lib/triton/Makefile
@@ -1,10 +1,10 @@
-# /phoenix/unit_tests/Makefile
+# /phoenix/lib/triton/Makefile
 #
 # This file is a part of Phoenix operating system.
 # Copyright (c) 2011, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
-SUBDIRS = common triton
+LIB = triton
 
-include $(PHOENIX_ROOT)/make/unit_test.mak
+include $(PHOENIX_ROOT)/make/make.mak
