--- a/unit_tests/triton/strings/Makefile
+++ b/unit_tests/triton/strings/Makefile
@@ -1,10 +1,14 @@
-# /phoenix/unit_tests/Makefile
+# /phoenix/unit_tests/triton/strings/Makefile
 #
 # This file is a part of Phoenix operating system.
 # Copyright (c) 2011, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
-SUBDIRS = common triton
+TEST_NAME = triton_strings
+TEST_DESC = Triton strings classes and operations
+
+TEST_SRCS = \
+	$(wildcard $(PHOENIX_ROOT)/lib/triton/*.cpp)
 
 include $(PHOENIX_ROOT)/make/unit_test.mak
