--- a/kernel/efi/Makefile
+++ b/kernel/efi/Makefile
@@ -1,7 +1,7 @@
 # /phoenix/kernel/efi/Makefile
 #
 # This file is a part of Phoenix operating system.
-# Copyright (c) 2011, Artyom Lebedev <artyom.lebedev@gmail.com>
+# Copyright (c) 2011-2012, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
