--- a/unit_tests/common/hash/Makefile
+++ b/unit_tests/common/hash/Makefile
@@ -1,15 +1,14 @@
-# /phoenix/unit_tests/triton/generic/Makefile
+# /phoenix/unit_tests/common/hash/Makefile
 #
 # This file is a part of Phoenix operating system.
 # Copyright (c) 2011-2012, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
-TEST_NAME = triton_generic
-TEST_DESC = Triton generic functionality
+TEST_NAME = hash
+TEST_DESC = Hash algorithm
 
 TEST_SRCS = \
-	$(wildcard $(PHOENIX_ROOT)/lib/triton/*.cpp) \
-	$(wildcard $(PHOENIX_ROOT)/lib/common/*.cpp)
+	$(PHOENIX_ROOT)/lib/common/hash.cpp
 
 include $(PHOENIX_ROOT)/make/unit_test.mak
