--- a/unit_tests/triton/lists/Makefile
+++ b/unit_tests/triton/lists/Makefile
@@ -1,10 +1,14 @@
-# /phoenix/unit_tests/triton/Makefile
+# /phoenix/unit_tests/triton/lists/Makefile
 #
 # This file is a part of Phoenix operating system.
 # Copyright (c) 2011-2012, Artyom Lebedev <artyom.lebedev@gmail.com>
 # All rights reserved.
 # See COPYING file for copyright details.
 
-SUBDIRS = generic strings lists
+TEST_NAME = triton_lists
+TEST_DESC = Triton lists classes and operations
+
+TEST_SRCS = \
+	$(wildcard $(PHOENIX_ROOT)/lib/triton/*.cpp)
 
 include $(PHOENIX_ROOT)/make/unit_test.mak
